# zkbootstrap

./: .gitignore  Cargo.toml  README.md  build.rs  cat.c  catm.M1  flake.nix  hello.c  jcat.c  justfile  loop.M1  seed  sha256sum.c
M2libc/: .gitrepo
M2libc/riscv32/: libc-core.M1
assets/: demo1.zbb  hex1.M1  jcat.M1  jhex0.M1  libc-core.M1
benches/: proving.rs
bins/prepare-demo/: Cargo.toml
bins/prepare-demo/src/: main.rs
bins/zb/: Cargo.toml
bins/zb/src/: main.rs
blob/: jcat.M1  jcat.c  jhex.c  justfile  libj_prelude.c
blob/stage0-posix-riscv32/: .gitrepo
crates/format/: Cargo.toml
crates/format/src/: write.rs
crates/methods/: Cargo.toml
crates/methods/jcat/: Cargo.toml
crates/seeds/: Cargo.toml  build.rs
crates/seeds/assets/: cat_reference.M2  jcat.M1  jhex0.M1  libj_prelude.c
crates/seeds/src/: lib.rs
crates/seeds/tests/: lib.rs
crates/stage0/: Cargo.toml  build.rs
crates/stage0/assets/: hello.hex0  libc-core.M1
crates/zkbootstrap/: Cargo.toml
crates/zkbootstrap/src/: datatypes.rs  lib.rs  main.rs  zkvm.rs  zkvm_test.rs
crates/zkbootstrap/src/format/: mod.rs  read.rs
crates/zkbootstrap/src/store/: memory.rs  mod.rs
crates/zkbootstrap/src/store/backends/: filesystem.rs  memory.rs  mod.rs
crates/zkbootstrap/tests/: lib.rs
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/jhex0/: Cargo.toml
nix/: devshell.nix
src/: lib.rs  main.rs
tests/: lib.rs
