[package]
name = "zkbootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.2.5" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
anyhow = "1.0.97"
sha2 = "0.10.8"
methods.path = "methods"
hex = "0.4.3"
rust-embed = { version = "8.7.0", features = ["interpolate-folder-path"] }

[build-dependencies]
build-rs = "0.1.2"

[[bench]]
name = "proving"
harness = false
