[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "bin/demo",
    "bin/zb",

    "crates/zkbootstrap",
    "crates/stage0",
    "crates/methods",
]

[workspace.dependencies]
risc0-zkvm = { version = "1.2.5" }
risc0-build = { version = "1.2.5" }
serde = "1.0"
serde_json = "1.0"
rmp-serde = "1.3.0"
serde_bytes = "0.11.17"
anyhow = "1.0.97"
sha2 = "0.10.8"
hex = "0.4.3"
rust-embed = { version = "8.7.0", features = ["interpolate-folder-path"] }
flate2 = "1.1"
build-rs = "0.1.2"
clap = { version = "4.5", features = ["derive"] }

format.path = "crates/format"
methods.path = "crates/methods"
stage0.path = "crates/stage0"
zkbootstrap.path = "crates/zkbootstrap"
