[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "bins/prepare-demo",
    "bins/zb",

    "crates/seeds",
    "crates/methods",
    "crates/zkbootstrap",
]

[workspace.dependencies]
risc0-zkvm = { version = "1.2.5" }
risc0-build = { version = "1.2.5" }
serde = "1.0"
serde_json = "1.0"
rmp-serde = "1.3.0"
serde_bytes = "0.11.17"
anyhow = "1.0.97"
sha2 = "0.10.8"
hex = "0.4.3"
rust-embed = { version = "8.7.0", features = ["interpolate-folder-path"] }
flate2 = "1.1"
build-rs = "0.1.2"
clap = { version = "4.5", features = ["derive"] }
ptree = "0.5"

methods.path = "crates/methods"
seeds.path = "crates/seeds"
zkbootstrap.path = "crates/zkbootstrap"
