[package]
name = "zkbootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
format.workspace = true
stage0.workspace = true

risc0-zkvm.workspace = true
serde.workspace = true
serde_bytes.workspace = true
anyhow.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
methods.workspace = true
