[package]
name = "zkbootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
anyhow.workspace = true
flate2.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
methods.workspace = true
